--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,10 @@ services:
     ports:
       - "8090:80"
     environment:
-      PMA_HOST: mysql
+      PMA_HOST: ${HOST_ADDRESS}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     networks:
       - mysql-phpmyadmin
-
 networks:
   mysql-phpmyadmin:
     external: true
